--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "async": "^2.1.2",
     "debug": "^2.2.0",
+    "docker-events": "0.0.2",
+    "dockerode": "^2.3.1",
     "lodash": "^4.16.4"
   }
 }
