--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "debug": "^2.2.0",
     "docker-events": "0.0.2",
     "dockerode": "^2.3.1",
+    "googleapis": "^14.1.0",
     "lodash": "^4.16.4"
   }
 }
