--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "dockerode": "^2.3.1",
     "googleapis": "^14.1.0",
     "lodash": "^4.16.4"
+  },
+  "devDependencies": {
+    "express": "^4.14.0",
+    "http-proxy": "^1.15.2"
   }
 }
