--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "docker-events": "0.0.2",
     "dockerode": "^2.3.1",
     "googleapis": "^14.1.0",
-    "lodash": "^4.16.4"
+    "lodash": "^4.16.4",
+    "mocha": "^3.1.2"
   },
   "devDependencies": {
     "express": "^4.14.0",
