--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docker-gce-discovery",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "A Node.js library for discovering Docker containers on multiple hosts.",
   "main": "lib/index.js",
   "scripts": {
@@ -23,11 +23,11 @@
     "dockerode": "^2.3.1",
     "googleapis": "^14.1.0",
     "lodash": "^4.16.4",
-    "mocha": "^3.1.2",
     "object-emitter": "^0.1.3"
   },
   "devDependencies": {
     "express": "^4.14.0",
-    "http-proxy": "^1.15.2"
+    "http-proxy": "^1.15.2",
+    "mocha": "^3.1.2"
   }
 }
